# cologne_phonetics

./: Cargo.toml  README.md
examples/: cologne_cat.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cologne_string.rs  cologne_vec.rs  colognecodes_vec.rs
src/: cologne_vec.rs  lib.rs  string.rs  tests.rs
