[package]
name = "cologne_phonetics"
version = "0.1.0"
edition = "2021"
description = "Crate to generate phonetic cologne codes for utf8 strings"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# just for testing etc.
std = []

default = ["std"]

[dependencies]

[[example]]
name = "cologne_cat"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

